lib/src/compiler/tests/testdata/errors/11.out
error[E014]: invalid regular expression
 --> line:2:35
  |
2 |   condition: "foobar" matches /foo[bar/
  |                                   ^ unclosed character class
  |